# SherLOG-Holmes

./: .gitignore  README.md  crewai_flow.html  pyproject.toml
api/: app.py
file_server/3e7cc6eb-0a10-4588-a7d0-740fe68bf946/: crew_results.json  customer_email.md  customer_faq.md  failure_logs.md  non-technical-rca_2025-02-19_21-47-53.md  technical-rca_2025-02-19_21-47-53.md
file_server/7233bc7e-e641-44ae-b98d-567af77f9a8c/: crew_results.json  customer_email.md  customer_faq.md  failure_logs.md  jobsStatus.json  non-technical-rca_2025-02-19_21-47-53.md  technical-rca_2025-02-19_21-47-53.md
file_server/7e6c1a1e-fd91-45df-917d-d6d69170488b/: crew_results.json  customer_email.md  customer_faq.md  failure_logs.md  non-technical-rca_2025-02-19_21-47-53.md  technical-rca_2025-02-19_21-47-53.md
file_server/a56075bc-8195-4641-8797-8461b06c2acc/: crew_results.json  customer_email.md  customer_faq.md  failure_logs.md  non-technical-rca_2025-02-19_21-47-53.md  technical-rca_2025-02-19_21-47-53.md
knowledge/wiki/: architecture.txt  network.txt
logs/: py_log_gen.py
sample_results/: backend_engineer.md  crew_results.json  customer_email.md  customer_faq.md  failure_logs.md  network_engineer.md  non-technical-rca_2025-02-17_21-27-55.md  non-technical-rca_2025-02-17_21-39-20.md  technical-rca_2025-02-17_21-27-55.md  technical-rca_2025-02-17_21-39-20.md  war_room.md
src/sherlogholmes/: _types.py  main.py
src/sherlogholmes/crews/alert_response_crew/: alert_response_crew.py
src/sherlogholmes/crews/rca_crew/: rca_crew.py
src/sherlogholmes/utils/: utils.py
(+13 files in other folders)
